--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -2,17 +2,24 @@
   "ok": "OK",
   "cancel": "Cancel",
 
-  "settings": "Settings",
   "settings1": "Data Management",
-  "settings2": "Language",
+    "settings1-1": "Vehicle Models",
+      "settings1-1-1": "Edit vehicle model",
+      "settings1-1-2": "Model",
+      "settings1-1-3": "Model Code",
+    "settings1-2": "Acronyms",
+    "settings1-3": "DTC Codes",
+  "settings2": "Settings",
+    "settings2-1": "Language",
 
   "language1": "Application Language",
     "language1-1": "English (US)",
     "language1-2": "Korean",
-  "language2": "DTC Description Language",
-    "language2-1": "English (US)",
-    "language2-2": "Korean",
-    "language2-3": "Both",
+  "language2": "Description Language",
+    "language2-1": "Change language of acronym and DTC description",
+    "language2-2": "English (US)",
+    "language2-3": "Korean",
+    "language2-4": "Both",
 
   "homePage1": "Acronym List",
   "homePage2": "VIN Decoder",
