--- a/assets/translations/ko-KR.json
+++ b/assets/translations/ko-KR.json
@@ -2,17 +2,24 @@
   "ok": "확인",
   "cancel": "취소",
 
-  "settings": "설정",
-  "settings1": "데이터 관리ㄴ",
-  "settings2": "언어",
+  "settings1": "데이터 관리",
+    "settings1-1": "차량 모델",
+      "settings1-1-1": "차량 모델 수정",
+      "settings1-1-2": "모델",
+      "settings1-1-3": "모델 코드",
+    "settings1-2": "약어",
+    "settings1-3": "고장 코드(DTC)",
+  "settings2": "설정",
+    "settings2-1": "언어",
 
   "language1": "어플리케이션 언어",
     "language1-1": "영어 (미국)",
     "language1-2": "한국어",
   "language2": "고장 코드(DTC) 설명 언어",
-    "language2-1": "영어 (미국)",
-    "language2-2": "한국어",
-    "language2-3": "전부",
+    "language2-1": "약어 및 DTC 설명을 변경합니다.",
+    "language2-2": "영어 (미국)",
+    "language2-3": "한국어",
+    "language2-4": "전부",
   
   "homePage1": "약어 목록",
   "homePage2": "차대 번호(VIN) 해석",
