--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -3,12 +3,22 @@
   "cancel": "Cancel",
 
   "settings1": "Data Management",
-    "settings1-1": "Vehicle Models",
-      "settings1-1-1": "Edit vehicle model",
-      "settings1-1-2": "Model",
-      "settings1-1-3": "Model Code",
-    "settings1-2": "Acronyms",
-    "settings1-3": "DTC Codes",
+    "settings1-1": "Acronyms",
+    "settings1-2": "DTC Codes",
+    "settings1-3": "Vehicle Models",
+      "settings1-3-1": "Edit vehicle model",
+      "settings1-3-2": "Model",
+      "settings1-3-3": "Model Code",
+      "settings1-3-4": "Model is already exists",
+      "settings1-3-5": "Model Code is already exists",
+      "settings1-3-6": "Edit",
+      "settings1-3-7": "Delete",
+      "settings1-3-8": "Delete data?",
+      "settings1-3-9": "Deleted data cannot be restored.",
+      "settings1-3-10": "Add vehicle model",
+      "settings1-3-11": "Add",
+      "settings1-3-12": "Transaction has been completed.",
+      "settings1-3-13": "Something is wrong. Error occured.",
   "settings2": "Settings",
     "settings2-1": "Language",
 
