--- a/assets/translations/ko-KR.json
+++ b/assets/translations/ko-KR.json
@@ -3,17 +3,27 @@
   "cancel": "취소",
 
   "settings1": "데이터 관리",
-    "settings1-1": "차량 모델",
-      "settings1-1-1": "차량 모델 수정",
-      "settings1-1-2": "모델",
-      "settings1-1-3": "모델 코드",
-    "settings1-2": "약어",
-    "settings1-3": "고장 코드(DTC)",
+    "settings1-1": "약어",
+    "settings1-2": "고장 코드(DTC)",
+    "settings1-3": "차량 모델",
+      "settings1-3-1": "차량 모델 수정",
+      "settings1-3-2": "모델",
+      "settings1-3-3": "모델 코드",
+      "settings1-3-4": "모델명이 이미 존재합니다",
+      "settings1-3-5": "모델 코드가 이미 존재합니다",
+      "settings1-3-6": "변경",
+      "settings1-3-7": "삭제",
+      "settings1-3-8": "데이터를 삭제하시겠습니까?",
+      "settings1-3-9": "삭제된 데이터는 복구할 수 없습니다.",
+      "settings1-3-10": "차량 모델 추가",
+      "settings1-3-11": "추가",
+      "settings1-3-12": "작업이 완료되었습니다.",
+      "settings1-3-13": "무언가 잘못됐습니다. 에러가 발생했습니다.",
   "settings2": "설정",
     "settings2-1": "언어",
 
   "language1": "어플리케이션 언어",
-    "language1-1": "영어 (미국)",
+    "language1-3": "영어 (미국)",
     "language1-2": "한국어",
   "language2": "고장 코드(DTC) 설명 언어",
     "language2-1": "약어 및 DTC 설명을 변경합니다.",
