reprogramming sql connection logic

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -32,16 +32,21 @@
     "language2-4": "Both",
 
   "homePage1": "Acronym List",
-  "homePage2": "VIN Decoder",
-  "homePage3": "DTC List",
-    "homePage3-1": "Powertrain",
-    "homePage3-2": "Network",
-    "homePage3-3": "Chassis",
-    "homePage3-4": "Body",
-    "homePage3-5": "Multimedia",
-    "homePage3-6": "Search for DTC Code or Description",
-  "homePage4": "Troubleshoot",
-    "homePage4-1": "Search for DTC Code",
+    "homePage1-1": "Search for Acronyms or Description",
+  "homePage2": "Airbag Table",
+  "homePage3": "VIN Decoder",
+  "homePage4": "DTC List",
+    "homePage4-1": "Powertrain",
+    "homePage4-2": "Network",
+    "homePage4-3": "Chassis",
+    "homePage4-4": "Body",
+    "homePage4-5": "Multimedia",
+    "homePage4-6": "Search for DTC Code or Description",
+  "homePage5": "Troubleshoot",
+    "homePage5-1": "Model Name",
+    "homePage5-2": "Body Number",
+    "homePage5-3": "DTC Code",
+    "homePage5-4": "Tech",
 
   "detailPage": "Details",
   "detailPage1": "Description",
@@ -62,5 +67,14 @@
   "uploadPage8": "Upload Photo",
   "uploadPage9": "Upload",
   "uploadPage10": "Leave page?",
-  "uploadPage11": "Changes that you made may not be saved."
+  "uploadPage11": "Changes that you made may not be saved.",
+
+  "date1": "1 week ago, ",
+  "date2": " days ago",
+  "date3": "1 day ago",
+  "date4": " hours ago",
+  "date5": "1 hour ago",
+  "date6": " minutes ago",
+  "date7": "1 minite ago",
+  "date8": "Just now"
 }
