--- a/assets/translations/ko-KR.json
+++ b/assets/translations/ko-KR.json
@@ -23,7 +23,7 @@
     "settings2-1": "언어",
 
   "language1": "어플리케이션 언어",
-    "language1-3": "영어 (미국)",
+    "language1-1": "영어 (미국)",
     "language1-2": "한국어",
   "language2": "고장 코드(DTC) 설명 언어",
     "language2-1": "약어 및 DTC 설명을 변경합니다.",
@@ -32,16 +32,21 @@
     "language2-4": "전부",
   
   "homePage1": "약어 목록",
-  "homePage2": "차대 번호(VIN) 해석",
-  "homePage3": "고장 코드(DTC) 목록",
-    "homePage3-1": "파워트레인",
-    "homePage3-2": "네트워크",
-    "homePage3-3": "섀시",
-    "homePage3-4": "바디",
-    "homePage3-5": "멀티미디어",
-    "homePage3-6": "고장 코드(DTC) 또는 설명 검색",
-  "homePage4": "문제 해결 도구",
-    "homePage4-1": "고장 코드(DTC) 검색",
+    "homePage1-1": "약어 또는 설명 검색",
+  "homePage2": "에어백 테이블",
+  "homePage3": "차대 번호(VIN) 해석",
+  "homePage4": "고장 코드(DTC) 목록",
+    "homePage4-1": "파워트레인",
+    "homePage4-2": "네트워크",
+    "homePage4-3": "섀시",
+    "homePage4-4": "바디",
+    "homePage4-5": "멀티미디어",
+    "homePage4-6": "고장 코드(DTC) 또는 설명 검색",
+  "homePage5": "문제 해결 도구",
+    "homePage5-1": "모델명",
+    "homePage5-2": "바디 번호",
+    "homePage5-3": "DTC 코드",
+    "homePage5-4": "기술자",
 
   "detailPage": "세부 사항",
   "detailPage1": "설명",
@@ -62,5 +67,14 @@
   "uploadPage8": "사진 업로드",
   "uploadPage9": "업로드",
   "uploadPage10": "페이지에서 나가시겠습니까?",
-  "uploadPage11": "변경사항이 저장되지 않을 수 있습니다."
+  "uploadPage11": "변경사항이 저장되지 않을 수 있습니다.",
+
+  "date1": "1주 전, ",
+  "date2": "일 전",
+  "date3": "1일 전",
+  "date4": "시간 전",
+  "date5": "1시간 전",
+  "date6": "분 전",
+  "date7": "1분 전",
+  "date8": "방금 전"
 }
