complete implementing all functions

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -18,7 +18,7 @@
       "settings1-3-10": "Add vehicle model",
       "settings1-3-11": "Add",
       "settings1-3-12": "Transaction has been completed.",
-      "settings1-3-13": "Something is wrong. Error occured.",
+      "settings1-3-13": "Something went wrong.",
   "settings2": "Settings",
     "settings2-1": "Language",
 
@@ -32,8 +32,9 @@
     "language2-4": "Both",
 
   "homePage1": "Acronym List",
-    "homePage1-1": "Search for Acronyms or Description",
+    "homePage1-1": "Acronyms or Description",
   "homePage2": "Airbag Table",
+    "homePage2-1": "Airbag Table or Description",
   "homePage3": "VIN Decoder",
   "homePage4": "DTC List",
     "homePage4-1": "Powertrain",
@@ -41,20 +42,28 @@
     "homePage4-3": "Chassis",
     "homePage4-4": "Body",
     "homePage4-5": "Multimedia",
-    "homePage4-6": "Search for DTC Code or Description",
+    "homePage4-6": "DTC Code or Description",
   "homePage5": "Troubleshoot",
     "homePage5-1": "Model Name",
     "homePage5-2": "Body Number",
     "homePage5-3": "DTC Code",
     "homePage5-4": "Tech",
 
-  "detailPage": "Details",
-  "detailPage1": "Description",
-  "detailPage2": "DTC Inspection",
-  "detailPage3": "Log",
-    "detailPage3-1": "Tech",
-    "detailPage3-2": "Failure Mode",
-    "detailPage3-3": "Photo",
+  "troubleshootPage": "Details",
+  "troubleshootPage1": "Description",
+  "troubleshootPage2": "DTC Inspection",
+  "troubleshootPage3": "Log",
+    "troubleshootPage3-1": "Tech",
+    "troubleshootPage3-2": "Failure Mode",
+    "troubleshootPage3-3": "Photo",
+
+  "decoderPage1": "Description",
+  "decoderPage2": "VIN Scanner",
+    "decoderPage2-1": "Enter the VIN to check",
+    "decoderPage2-2": "VIN cannot be empty",
+    "decoderPage2-3": "Input value is not in a correct format",
+  "decoderPage3": "VIN Detected",
+  "decoderPage4": "If you have problems recognizing barcodes, please click here.",
 
   "uploadPage": "Upload Log",
   "uploadPage1": "Model",
@@ -66,8 +75,12 @@
   "uploadPage7": "Description",
   "uploadPage8": "Upload Photo",
   "uploadPage9": "Upload",
-  "uploadPage10": "Leave page?",
+  "uploadPage10": "Leave Page?",
   "uploadPage11": "Changes that you made may not be saved.",
+  "uploadPage12": "Camera",
+  "uploadPage13": "Gallery",
+  "uploadPage14": "Attachment Failure",
+  "uploadPage15": "Cannot attach photos more than 6.",
 
   "date1": "1 week ago, ",
   "date2": " days ago",
