--- a/assets/translations/ko-KR.json
+++ b/assets/translations/ko-KR.json
@@ -18,7 +18,7 @@
       "settings1-3-10": "차량 모델 추가",
       "settings1-3-11": "추가",
       "settings1-3-12": "작업이 완료되었습니다.",
-      "settings1-3-13": "무언가 잘못됐습니다. 에러가 발생했습니다.",
+      "settings1-3-13": "문제가 발생했습니다.",
   "settings2": "설정",
     "settings2-1": "언어",
 
@@ -32,8 +32,9 @@
     "language2-4": "전부",
   
   "homePage1": "약어 목록",
-    "homePage1-1": "약어 또는 설명 검색",
+    "homePage1-1": "약어 검색",
   "homePage2": "에어백 테이블",
+    "homePage2-1": "에어백 테이블 검색",
   "homePage3": "차대 번호(VIN) 해석",
   "homePage4": "고장 코드(DTC) 목록",
     "homePage4-1": "파워트레인",
@@ -41,20 +42,28 @@
     "homePage4-3": "섀시",
     "homePage4-4": "바디",
     "homePage4-5": "멀티미디어",
-    "homePage4-6": "고장 코드(DTC) 또는 설명 검색",
+    "homePage4-6": "고장 코드(DTC) 검색",
   "homePage5": "문제 해결 도구",
     "homePage5-1": "모델명",
     "homePage5-2": "바디 번호",
     "homePage5-3": "DTC 코드",
     "homePage5-4": "기술자",
 
-  "detailPage": "세부 사항",
-  "detailPage1": "설명",
-  "detailPage2": "DTC 점검",
-  "detailPage3": "로그",
-    "detailPage3-1": "작성자",
-    "detailPage3-2": "고장 형태",
-    "detailPage3-3": "사진",
+  "troubleshootPage": "세부 사항",
+  "troubleshootPage1": "설명",
+  "troubleshootPage2": "DTC 점검",
+  "troubleshootPage3": "로그",
+    "troubleshootPage3-1": "작성자",
+    "troubleshootPage3-2": "고장 형태",
+    "troubleshootPage3-3": "사진",
+
+  "decoderPage1": "설명",
+  "decoderPage2": "VIN 스캐너",
+    "decoderPage2-1": "VIN 입력",
+    "decoderPage2-2": "VIN을 입력하세요",
+    "decoderPage2-3": "입력한 값이 올바른 형식이 아닙니다.",
+  "decoderPage3": "VIN 확인",
+  "decoderPage4": "바코드 인식에 문제가 있으면,\n여기를 클릭해 주세요",
 
   "uploadPage": "로그 업로드",
   "uploadPage1": "모델",
@@ -68,6 +77,10 @@
   "uploadPage9": "업로드",
   "uploadPage10": "페이지에서 나가시겠습니까?",
   "uploadPage11": "변경사항이 저장되지 않을 수 있습니다.",
+  "uploadPage12": "카메라",
+  "uploadPage13": "갤러리",
+  "uploadPage14": "사진 첨부를 실패했습니다.",
+  "uploadPage15": "사진을 6개 이상 첨부할 수 없습니다.",
 
   "date1": "1주 전, ",
   "date2": "일 전",
