--- a/assets/translations/ko-KR.json
+++ b/assets/translations/ko-KR.json
@@ -4,6 +4,27 @@
 
   "exception1": "서버 연결 실패",
 
+  "login1": "로그인",
+  "login2": "계정 등록",
+    "login2-1": "이메일 주소를 입력하세요",
+    "login2-2": "올바른 이메일 주소를 입력하세요",
+    "login2-3": "이 이메일 주소는 등록되어 있습니다",
+    "login2-4": "사용자 이름을 입력하세요",
+    "login2-5": "올바른 사용자 이름을 입력하세요",
+    "login2-6": "비밀번호를 입력하세요",
+    "login2-7": "비밀번호는 최소 6글자 이상이어야 합니다",
+    "login2-8": "비밀번호가 일치하지 않습니다",
+    "login2-9": "요청이 완료되었습니다",
+    "login2-10": "관리자가 해당 요청을 확인하고 승인하면 로그인이 가능합니다",
+  
+  "loginStatus1": "이메일 인증이 필요합니다",
+    "loginStatus1-1": "이메일 주소가 잘못되었습니다",
+    "loginStatus1-2": "비밀번호가 잘못되었습니다",
+    "loginStatus1-3": "이메일 주소를 찾을 수 없습니다",
+    "loginStatus1-4": "비활성화 된 이메일 주소입니다",
+    "loginStatus1-5": "이메일 주소와 비밀번호를 확인해주세요",
+    "loginStatus1-6": "인증되지 않은 이메일 주소입니다. 관리자에게 문의하세요",
+
   "settings1": "데이터 관리",
     "settings1-1": "약어",
     "settings1-2": "고장 코드(DTC)",
